--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format:check": "prettier --check \"**/*.{js,jsx,yml,yaml,json,css,md}\"",
-    "format": "prettier --write \"**/*.{js,jsx,yml,yaml,json,css,md}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,json,css,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,css,md}\""
   },
   "eslintConfig": {
     "extends": [
