--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   pull_request:
     branches: [develop]
+  push:
+    branches: [develop]
 
 jobs:
   build:
@@ -21,4 +23,15 @@ jobs:
         run: npm test -- --coverage
         env:
           CI: true
-        
+      
+      - name: Build Project
+        if: $GITHUB_EVENT_NAME == "push"
+        run: npm run build
+      - name: install surge
+        run: npm install -g surge
+      - name: Deploy to stage
+        if: $GITHUB_EVENT_NAME == "push"
+        run: npx surge --project ./build --domain lyrical-egg.surge.sh
+        env:
+          SURGE_LOGIN: ${{secret.SURGE_LOGIN}}
+          SURGE_TOKEN: ${{secret.SURGE_TOKEN}}
