--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,5 @@ jobs:
         if: $GITHUB_EVENT_NAME == "push"
         run: npx surge --project ./build --domain lyrical-egg.surge.sh
         env:
-          SURGE_LOGIN: ${{secret.SURGE_LOGIN}}
-          SURGE_TOKEN: ${{secret.SURGE_TOKEN}}
+          SURGE_LOGIN: ${{secrets.SURGE_LOGIN}}
+          SURGE_TOKEN: ${{secrets.SURGE_TOKEN}}
