--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,19 @@ jobs:
         run: npm test -- --coverage
         env:
           CI: true
-      
+      - name: Upload coverage
+        uses: actions/upload-artifacts@v1
+        with:
+          path: coverage
+          name: code-coverage
       - name: Build Project
         if: github.event_name == 'push'
         run: npm run build
+      - name: Upload coverage
+        uses: actions/upload-artifacts@v1
+        with:
+          path: build
+          name: build
       - name: install surge
         run: npm install -g surge
       - name: Deploy to stage
